# cloud-run-batch-ocr

./: .gitignore  CONTRIBUTING.md  GEMINI.md  README.md
app/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_main.py  test_proto.py
docs/: deploy-gcloud.md  deploy-terraform.md  runbook.md
docs/CODEMAPS/: INDEX.md  architecture.md
terraform/: main.tf  provider.tf  variables.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/gcs-bucket/: main.tf  outputs.tf  variables.tf
tests/e2e/: test_e2e.py
